test/message/syntactic-tail-call-inside-member-expr.out
*%(basename)s:12: SyntaxError: Tail call expression is not allowed here
  return (continue  f(1)) (2) ;
          ^^^^^^^^^^^^^^
SyntaxError: Tail call expression is not allowed here
